# template

./: .gitignore  README.md
axum-rust-template/: Cargo.toml
axum-rust-template/config/: config.toml
axum-rust-template/src/: main.rs  router.rs
axum-rust-template/src/apis/: mod.rs
axum-rust-template/src/init/: config.rs  mod.rs  tracing.rs
axum-rust-template/src/model/: config.rs
go-template/: .gitignore  README.md  go.mod  go.sum  main.go
go-template/app/boot/: boot.go  config.go  database.go  logger.go  redis.go  server.go
go-template/app/g/: constant.go  global.go  websocket.go
go-template/app/initialize/: boot.go  config.go  cron.go  database.go  logger.go  redis.go  router.go  server.go
go-template/app/middleware/: authorize.go  cros.go  jwt.go  logger.go  token_authorize.go
go-template/app/middlewares/: cros.go  jwt.go  logger.go
go-template/app/router/: enter.go
go-template/app/routers/: admin.go  router.go
go-template/app/service/: enter.go
go-template/app/utils/: directory.go  encryption.go  encryption_test.go  file_operations.go  jwt.go  logger.go  zip.go
go-template/config/: config.toml  routes.json
go-template/docs/: database.sql  docs.go  swagger.json  swagger.yaml
go-template/internal/boot/: config.go  cron.go  (+3 more)
poem-rust-template/: .gitignore
rust-template/: Cargo.toml
rust-template/src/: init.rs  main.rs
soybean-admin-template/: .env-config.ts  package.json  pnpm-lock.yaml
vue-template/: .env  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
vue-template/src/: App.vue  main.ts
(+88 files in other folders)
