[package]
name = "axum-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
chrono = "0.4.23"
serde = { version = "1.0.149", features = ["derive"] }
serde_derive = "1.0.149"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
